Downloads/rdt-main/k8s/sqlite-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlite-web
  namespace: default
  labels:
    app: sqlite-web
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: sqlite-web
---
apiVersion: v1
kind: Service
metadata:
  name: sqlite-web-nodeport
  namespace: default
  labels:
    app: sqlite-web
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: sqlite-web
